<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".presentation.details.DetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/error_title_default"
                />
            <Button
                android:id="@+id/retry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/retry_button_text"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/design_default_color_on_primary"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/detail_char_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/MaterialAlertDialog.Material3.Title.Text.CenterStacked"
        android:text="@string/hello_blank_fragment" />
    <ImageView
        android:id="@+id/character_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintTop_toBottomOf="@id/detail_char_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/detail_char_status_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/character_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_char_status"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:textStyle="bold"
        android:text="@string/detail_char_status_label" />

    <TextView
        android:id="@+id/detail_char_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/detail_char_status_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_char_status_label"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/detail_char_specie_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_char_specie"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:textStyle="bold"
        android:text="@string/detail_char_specie_label" />

    <TextView
        android:id="@+id/detail_char_specie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/detail_char_specie_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_char_specie_label"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/detail_char_origin_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_specie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_char_origin"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:textStyle="bold"
        android:text="@string/detail_char_origin_label" />

    <TextView
        android:id="@+id/detail_char_origin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/detail_char_origin_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_char_origin_label"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/detail_char_location_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_origin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_char_location"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:textStyle="bold"
        android:text="@string/detail_char_location_label" />

    <TextView
        android:id="@+id/detail_char_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/detail_char_location_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_char_location_label"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/detail_char_gender_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_char_location"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:textStyle="bold"
        android:text="@string/detail_char_gender_label" />

    <TextView
        android:id="@+id/detail_char_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/detail_char_gender_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_char_gender_label"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/detail_char_type_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_char_type"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:textStyle="bold"
        android:text="@string/detail_char_type_label" />

    <TextView
        android:id="@+id/detail_char_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/detail_char_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_char_type_label"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:text="@string/hello_blank_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>